order-service/k8s/mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-order-service
spec:
  selector:
    app: mysql-order-service
  ports:
    - port: 3306
      targetPort: 3306
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-order-service
  template:
    metadata:
      labels:
        app: mysql-order-service
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        args: ["--default-authentication-plugin=mysql_native_password"]
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-storage
        emptyDir: {}
