order-service/k8s/order-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: order
spec:
  selector:
    app: order-service
    version: blue
  ports:
    - port: 80
      targetPort: 5000
  type: LoadBalancer
